@@ -2,7 +2,7 @@ project(QMIDINET)
 
 cmake_minimum_required(VERSION 3.1)
 
-set (VERSION "0.6.1")
+set (VERSION "0.6.2")
 
 set (CONFIG_VERSION ${VERSION})
 execute_process (
